k8s/nginx-ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: sistema-pedidos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress-controller
  template:
    metadata:
      labels:
        app: nginx-ingress-controller
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: k8s.gcr.io/ingress-nginx/controller:v1.1.1  # Adjust the image tag as needed
          args:
            - /nginx-ingress-controller
            - --publish-service=ingress-nginx/nginx-ingress-controller
            - --election-id=ingress-controller-leader
            - --ingress-class=nginx
      hostNetwork: true

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: sistema-pedidos
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: nginx-ingress-controller

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sistema-pedidos-ingress
  namespace: sistema-pedidos
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: sistema-pedidos-app-service
                port:
                  number: 8080
